<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Enonic Twitranett</string>

  <string name="twitranettMainActivity">Twitranett Messages</string>
  <string name="twitranettLoginActivity">Twitranett Login</string>
  <string name="twitranettPropertiesActivity">Twitranett Properties</string>

  <string name="prompt_no">Ny melding:</string>
  <string name="prompt_en">New message:</string>
  <string name="login_promt_no">Twitranett Login</string>
  <string name="login_promt_en">Twitranett Login</string>
  <string name="username_prompt_no">Brukernavn: </string>
  <string name="username_prompt_en">User Name: </string>
  <string name="password_prompt_no">Passord: </string>
  <string name="password_prompt_en">Password: </string>
  <string name="login_button_no">Logg inn</string>
  <string name="login_button_en">Login</string>
  <string name="set_button_no">Sett</string>
  <string name="set_button_en">Set</string>
  <string name="cancel_button_no">Avbryt</string>
  <string name="cancel_button_en">Cancel</string>
  <string name="clear_button_no">Tøm</string>
  <string name="clear_button_en">Clear</string>
  <string name="menu_preferences_en">Preferences</string>
  <string name="menu_preferences_no">Egenskaper</string>
  <string name="menu_logout_en">Logout</string>
  <string name="menu_logout_no">Logg ut</string>
  <string name="remember_me_en"> Remember me </string>
  <string name="remember_me_no"> Husk meg </string>

  <!-- Preferences -->
  <string name="pref_message_count">message_count</string>

  <!-- internal keys -->
  <string name="key_username">k_username</string>
  <string name="key_password">k_password</string>
  <string name="key_rememberMe">k_rememberMe</string>
  <string name="property_data_type">propertyDataType</string>
  <string name="property_adapter_class">propertyAdapterClass</string>

</resources>
