<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="5dp">
      <TextView android:id="@+id/emptyLine"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=" "
                android:textSize="14pt"/>
      <TextView android:id="@+id/loginPrompt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_promt_no"
                android:gravity="center"
                android:textSize="14pt"/>
      <TextView android:id="@+id/usernamePrompt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/username_prompt_no"
                android:gravity="left"
                android:textSize="10pt"/>
      <EditText android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="10pt"
                android:background="@android:drawable/editbox_background"/>
      <TextView android:id="@+id/passwordPrompt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_prompt_no"
                android:gravity="left"
                android:textSize="10pt"/>
      <EditText android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="10pt"
                android:password="true"
                android:inputType="textNoSuggestions"
                android:background="@android:drawable/editbox_background"/>
      <RelativeLayout android:layout_height="wrap_content"
                      android:layout_width="fill_parent"
                      android:layout_gravity="left">
        <CheckBox android:id="@+id/rememberMe"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"/>
        <TextView android:id="@+id/rememberMePrompt"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_toRightOf="@id/rememberMe"
                  android:text="@string/remember_me_no"
                  android:gravity="left"
                  android:textSize="10pt"/>
      </RelativeLayout>
      <RelativeLayout android:layout_height="wrap_content"
                      android:layout_width="fill_parent"
                      android:layout_gravity="right">
        <Button android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dip"
                android:text="@string/login_button_no"
                android:textSize="12pt"/>
        <Button android:id="@+id/clearLoginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/loginButton"
                android:layout_alignTop="@id/loginButton"
                android:text="@string/clear_button_no"
                android:textSize="12pt"/>
      </RelativeLayout>

    </LinearLayout>
</TabHost>